<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addMoviesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="addMoviesClicked"
        android:text="@string/Add_Movies_Btn_Txt"
        app:layout_constraintBottom_toTopOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="editMoviesClicked"
        android:text="@string/Edit_Btn_Txt"
        app:layout_constraintBottom_toTopOf="@+id/deleteMovieBtn"
        app:layout_constraintEnd_toEndOf="@+id/addMoviesBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/addMoviesBtn"
        app:layout_constraintTop_toBottomOf="@+id/addMoviesBtn" />

    <Button
        android:id="@+id/deleteMovieBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="deleteMoviesClicked"
        android:text="@string/Delete_Movie_Btn_Txt"
        app:layout_constraintBottom_toTopOf="@+id/listByYrBtn"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/editBtn" />

    <Button
        android:id="@+id/listByYrBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showListByYearClicked"
        android:text="@string/List_By_Yr_Btn_Txt"
        app:layout_constraintBottom_toTopOf="@+id/showListByRatingBtn"
        app:layout_constraintEnd_toEndOf="@+id/deleteMovieBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/deleteMovieBtn"
        app:layout_constraintTop_toBottomOf="@+id/deleteMovieBtn" />

    <Button
        android:id="@+id/showListByRatingBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showListByRatingClicked"
        android:text="@string/Show_List_By_Rating_Btn_Txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/listByYrBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/listByYrBtn"
        app:layout_constraintTop_toBottomOf="@+id/listByYrBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>